v1.0.7
- Prevent custom seed text from showing in RA Rich Presence

v1.0.6
- Include version in RA Rich Presence

v1.0.5
- Added a chat command to reset a single local achievement
- Added a warning about crafting within Magic Storage
- Actually fixed incorrect reporting of unlocked achievement total

v1.0.4
- Fixed login for passwords with whitespace
- Allow "A Rare Realm" to unlock on RA when entering a world

v1.0.3
- Actually fixed ammo bug (updated TerrariaAchievementLib submodule)

v1.0.2
- Fixed ammo bug (updated TerrariaAchievementLib submodule)

v.1.0.1
- Fixed subset unlock requests
- Fixed achievement buff being cleared on death
- Fixed incorrect reporting of unlocked achievement total